--- a/USemplStreaks.ipynb
+++ b/USemplStreaks.ipynb
@@ -458,6 +458,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Create Figure 5, job growth by industry"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
